# bachelor_thesis

./: .gitignore  README.md  coding_guidelines.md  pyproject.toml
data/: README.md
notebooks/: 00_eda_labels.ipynb  02_traintestsplit.ipynb  04_before_after_without_photobox.ipynb  06_additional_rating.ipynb  08_tests_on_testset.ipynb  README.md
notebooks/archive/: 01_models.ipynb  03_Simple_CNN.ipynb  dataset_testing.ipynb
src/: params.yaml  train.py
src/data/: after_image_dataset.py  before_after_image_with_box_dataset.py
src/model/: CNN.py  Vision_Transformer.py  advanced_cnn.py  base_cnn.py  before_after_many_feature_maps_cnn.py  lightning_base_model.py  resnet_18.py  resnet_50.py
src/utils/: adhesive_stripe_detector.py
